@@ -5,8 +5,8 @@
 #Reflector C used during war, but only temporarily
 #Thins only used with M4 model used by Kriegsmarine
 #               ABCDEFGHIJKLMNOPQRSTUVWXYZ
-UKW_A	EJMZALYXVBWFCRQUONTSPIKHGD  111
-UKW_B	YRUHQSLDPXNGOKMIEBFZCWVJAT  111
-UKW_C	FVPJIAOYEDRZXWGCTKUQSBNMHL  111
-UKW_B_Thin	ENKQAUYWJICOPBLMDXZVFTHRGS  100
-UKW_C_Thin	RDOBJNTKVEHMLFCWZAXGYIPSUQ  100
+UKW-A	EJMZALYXVBWFCRQUONTSPIKHGD  111
+UKW-B	YRUHQSLDPXNGOKMIEBFZCWVJAT  111
+UKW-C	FVPJIAOYEDRZXWGCTKUQSBNMHL  111
+UKW-B-Thin	ENKQAUYWJICOPBLMDXZVFTHRGS  100
+UKW-C-Thin	RDOBJNTKVEHMLFCWZAXGYIPSUQ  100
